# psychic

./: DESIGN.md  README.md  pyproject.toml
docs/: HARDWARE_REQUIREMENTS.md
plans/: 2503201730_multi_model_interpretability_study.md  2503201830_multi_family_expansion.md
reports/: 2503201200_per_prompt_classification.md  2503201430_classification_results.md  2503201500_global_workspace_hypothesis.md  2503201600_baseline_classification_v1.md  2503201700_hybrid_bp_map_v1.md  2503201800_cross_model_comparison_v1.md  2503202200_qwen_cross_family_v1.md  2503202300_and_hub_theoretical_v1.md
src/psychic/cli/: main.py
src/psychic/cli/commands/: analyze.py  classify.py  clear.py  collect.py  download.py  download_vocab.py  forward.py  heads.py  inspect.py  list_models.py  list_prompts.py  patterns.py
src/psychic/core/: analysis.py  classify.py  forward.py  forward_gpt2.py  forward_llama.py  forward_qwen2.py  loader.py  models.py  prompts.py  tokenizer.py
src/psychic/models/: deepseek-r1-qwen-1.5b.json  gpt2-medium.json  gpt2-xl.json  gpt2.json  llama3.2-1b.json  qwen2.5-0.5b.json  qwen2.5-1.5b.json
src/psychic/prompts/: general.txt
src/psychic/prompts/data/: causal.txt  dialogue.txt  factual.txt  logic.txt  narrative.txt  questions.txt  spatial.txt  temporal.txt
src/psychic/prompts/indexes/: all.txt  language.txt  quick.txt  reasoning.txt
