[project]
name = "psychic"
version = "0.1.0"
description = "Empirical inspection of transformer weights through the BP lens"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
    "regex>=2024.0.0",
]

[project.scripts]
psychic = "psychic.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psychic"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]